# howest-dl

./: .gitattributes  .gitignore  Notes.md  README.md  main.py  pyproject.toml
.virtual_documents/sessie_01/demos/: Class_weight_balancing.ipynb  (+5 more)
sessie_01/demos/: Class_weight_balancing.ipynb  Class_weight_balancing_old.ipynb  EarlyStopping.ipynb  Example_Cancer_Detection_NN.ipynb  Example_MNIST_NN.ipynb  HyperparameterOptimization.ipynb  Logistic_regression_NN.ipynb  Neural_Network_in_Keras.ipynb
sessie_01/opdracht/: Opdracht_Sessie_01_Neurale_Netwerken_Opdracht.ipynb  Sam_Deleu_Opdracht_Sessie_01_Neurale_Netwerken_Opdracht.ipynb
sessie_01/oplossing/: Oplossing_Sessie_1_Customer_satisfaction.ipynb  Oplossing_Sessie_1_Neurale_Netwerken (1).ipynb  Oplossing_Sessie_1_Neurale_Netwerken.ipynb  Oplossing_Sessie_1_Zalando.ipynb
sessie_01/samsam/: code_student.ipynb  grafics.ipynb
sessie_02/: load_faces.ipynb  load_faces_2.ipynb  load_faces_3.ipynb
sessie_02/demos/: CNN_Transfer_Learning_Demos_CIFAR.ipynb  Convolutie.ipynb  Image_Augmentation.ipynb  Tensorboard.ipynb  transfer_learning_1.ipynb
sessie_02/opdracht/: Sam_Deleu_Sessie_02_Convolutional_Neural_Networks_Opdracht.ipynb  Sessie_02_Convolutional_Neural_Networks_Opdracht.ipynb  notes.md  opdracht.ipynb  some_trials.ipynb  tensorflow_trials.ipynb
sessie_03/demos/: Demos_Autoencoders_Tensorflow_2.ipynb
sessie_03/opdracht/: Sam_Deleu_Sessie_03_Autoencoders_Opdracht.ipynb  Sessie_03_Autoencoders_Opdracht-Copy1.ipynb  Sessie_03_Autoencoders_Opdracht.ipynb  trials.ipynb
sessie_04/demos/: Session_04_Deep_Generative_Models_Demos.ipynb
sessie_05/demos/: Stock_Prediction.ipynb
sessie_05/opdracht/: Sessie_05_Recurrent_Neural_Networks_Embedding_Opdracht_Tensorflow_1.ipynb
sessie_07/demos/: Sessie_07_Reinforcement_Learning_Demo.ipynb
src/howest_dl/: __init__.py  tf_install_test.py
(+64 files in other folders)
