[project]
name = "howest-dl"
version = "0.1.0"
description = "Howest Deep Learning 2024-2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.5",
    "keras>=3.8.0",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.18.0",
]

[project.scripts]
m = "howest_dl:main"
m2 = "howest_dl:tf_install_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

