[project]
name = "howest-dl"
version = "0.1.0"
description = "Howest Deep Learning 2024-2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "ipython==8.33.0",
    "ipywidgets>=8.1.5",
    "jedi-language-server>=0.43.1",
    "jupyter-console>=6.6.3",
    "jupyterlab>=4.3.5",
    "jupyterlab-lsp>=5.1.0",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "notebook>=7.3.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pydot>=3.0.4",
    "pytest>=8.3.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.18.0",
    "termcolor>=2.5.0",
]

[project.scripts]
m = "howest_dl:main"
m2 = "howest_dl:tf_install_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

